@@ -8,6 +8,7 @@ module.exports = function (app) {
                                                       toast,
                                                       $state,
                                                       dialog,
+                                                      gridService,
                                                       contextHelpService,
                                                       employeeService,
                                                       viewDocumentService,
@@ -41,20 +42,25 @@ module.exports = function (app) {
 
         /**
          * @description Contains options for grid configuration
-         * @type {{limit: number, page: number, order: string, limitOptions: [*]}}
+         * @type {{limit: (*|number), page: number, order: string, limitOptions: *[], pagingCallback: pagingCallback}}
          */
         self.grid = {
-            limit: 5, // default limit
+            limit: gridService.getGridPagingLimitByGridName(gridService.grids.inbox.favorite) || 5, // default limit
             page: 1, // first page
             order: '', // default sorting order
-            limitOptions: [5, 10, 20, // limit options
+            limitOptions: gridService.getGridLimitOptions(gridService.grids.inbox.favorite, favoriteDocumentsService.totalCount), //[5, 10, 20, 100, 200]
+            pagingCallback: function (page, limit) {
+                gridService.setGridPagingLimitByGridName(gridService.grids.inbox.favorite, limit);
+                self.reloadFavoriteDocuments(page);
+            }
+            /*limitOptions: [5, 10, 20, // limit options
                 {
                     label: langService.get('all'),
                     value: function () {
                         return (favoriteDocumentsService.totalCount + 21);
                     }
                 }
-            ]
+            ]*/
         };
 
 
