@@ -15,6 +15,7 @@ module.exports = function (app) {
                                                    viewDocumentService,
                                                    employeeService,
                                                    managerService,
+                                                   gridService,
                                                    validationService,
                                                    $timeout,
                                                    viewTrackingSheetService,
@@ -51,21 +52,17 @@ module.exports = function (app) {
 
         /**
          * @description Contains options for grid configuration
-         * @type {{limit: number, page: number, order: string, limitOptions: [*]}}
+         * @type {{limit: (*|number), page: number, order: string, limitOptions: *[], pagingCallback: pagingCallback}}
          */
         self.grid = {
-            limit: 5, // default limit
+            limit: gridService.getGridPagingLimitByGridName(gridService.grids.outgoing.review) || 5, // default limit
             page: 1, // first page
             //order: 'arName', // default sorting order
             order: '', // default sorting order,
-            limitOptions: [5, 10, 20, // limit options
-                {
-                    label: langService.get('all'),
-                    value: function () {
-                        return (self.reviewOutgoings.length + 21);
-                    }
-                }
-            ]
+            limitOptions: gridService.getGridLimitOptions(gridService.grids.outgoing.review, self.reviewOutgoings),
+            pagingCallback: function (page, limit) {
+                gridService.setGridPagingLimitByGridName(gridService.grids.outgoing.review, limit);
+            }
         };
 
         /**
