@@ -121,7 +121,7 @@
                                     md-limit="ctrl.grid.limit" md-page="ctrl.grid.page"
                                     md-total="{{ctrl.favoriteDocumentsService.totalCount}}"
                                     md-page-select
-                                    md-on-paginate="ctrl.reloadFavoriteDocuments">
+                                    md-on-paginate="ctrl.grid.pagingCallback">
                             </md-table-pagination>
                         </md-table-container>
                     </md-card>
