@@ -168,7 +168,7 @@
                                     md-limit="ctrl.grid.limit" md-page="ctrl.grid.page"
                                     md-total="{{ctrl.userSentItemService.totalCount}}"
                                     md-page-select
-                                    md-on-paginate="ctrl.reloadUserSentItems">
+                                    md-on-paginate="ctrl.grid.pagingCallback">
                             </md-table-pagination>
                         </md-table-container>
                     </md-card>
